samples/_failures_safe/1761400180_b07b2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a520535.c: In function ‘main’:
./samples/SAFE/__tmp_8a520535.c:166:12: error: expected expression at end of input
  166 |     struct context ctx = {STATE_IDLE, "",
      |            ^~~~~~~
./samples/SAFE/__tmp_8a520535.c:166:12: error: expected declaration or statement at end of input
